style(like): fix broken button on ios

--- a/assets/styles/helpers/_buttons.scss
+++ b/assets/styles/helpers/_buttons.scss
@@ -51,13 +51,17 @@
     position: relative;
     z-index: map-get($zindex, section);
 
+    svg {
+        margin-top: 0.65rem;
+    }
+
     svg path {
         transition: fill $speed $bezier;
     }
 
     &--wording {
         transition: transform $speed * 2 $bezier;
-        height: 100%;
+        height: 3rem;
         line-height: 3rem;
     }
 
@@ -66,7 +70,7 @@
     }
 
     &.is-active &--wording {
-        transform: translateY(-100%);
+        transform: translateY(-3rem);
     }
 
     &:hover svg path {
